# login-study-sameorigin

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  app.py  manage.py  pyproject.toml  requirements.txt
backend/backend/: __init__.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.tsx
frontend/src/routes/: App.tsx  Layout.tsx  Login.tsx  Signin.tsx
proxy/: nginx.conf
