[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Junnosuke Muto <128980368+JunnosukeMuto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Flask-RESTful = "^0.3.10"
Flask-Cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
