[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["JunnosukeMuto <128980368+JunnosukeMuto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
Flask-Cors = "^4.0.0"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
